crates/ink/tests/ui/scale_derive/fail/invalid_derive.rs
#[ink::scale_derive(Encode, Whatevs)]
struct S;

fn main() {
}