crates/ink/tests/ui/scale_derive/fail/invalid_derive.stderr
error: unsupported scale derive: expected Encode, Decode or TypeInfo
 --> tests/ui/scale_derive/fail/invalid_derive.rs:1:29
  |
1 | #[ink::scale_derive(Encode, Whatevs)]
  |                             ^^^^^^^
